--- a/overlay-demo/package.json
+++ b/overlay-demo/package.json
@@ -19,7 +19,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"node ./overlay-demo/ws-relay.js\" \"react-scripts start\"",
+    "start": "concurrently \"node ./sos-ws-relay-master/ws-relay.js\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
